@@ -1,3 +1,7 @@
+2011-02-22  Christian Kuhn  <lolli@schwarzbu.ch>
+
+	* Fixed bug #17661: Remove deprecated methods from t3lib_div
+
 2011-02-22  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Fixed bug #17695: htmlArea RTE: Removing format may remove content
